--- a/src/es/components/molecules/dialog/left-slide-in-wide-/left-slide-in-wide-.css
+++ b/src/es/components/molecules/dialog/left-slide-in-wide-/left-slide-in-wide-.css
@@ -13,7 +13,7 @@
   transform: translateX(-100%);
   transition: all 0.3s allow-discrete;
   padding: var(--dialog-left-slide-in-wide-padding-custom, 0);
-  height: 100%;
+  height: 100% !important;
   max-height: 100%;
   width: 100%;
   max-width: var(--dialog-left-slide-in-wide-max-width-custom, min(100%, 1120px));
@@ -119,13 +119,21 @@
 :host .dialog-content {
   background-color: var(--color-white, #fff);
   align-items: start;
-  flex: 0 1 auto;
+  flex: 1;
   flex-direction: column;
   overflow: auto;
   padding: 0;
   position: relative;
   z-index: 1;
   padding: var(--mdx-sys-spacing-flex-large-xs) var(--mdx-sys-spacing-flex-large-xs) var(--mdx-sys-spacing-flex-large-l);
+}
+
+/* iOS specific styles */
+@media only screen and (min-device-width: 320px) and (max-device-width: 812px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 2),
+       only screen and (min-device-width: 320px) and (max-device-width: 812px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 2) {
+    :host .dialog-content {
+    flex: 1;
+  }
 }
 
 :host .dialog-content .sub-content {
