--- a/src/es/components/molecules/dialog/left-slide-in-without-background-/left-slide-in-without-background-.css
+++ b/src/es/components/molecules/dialog/left-slide-in-without-background-/left-slide-in-without-background-.css
@@ -19,7 +19,7 @@
   transform: translateX(-100%);
   transition: 0.3s;
   padding: 0;
-  height: 100%;
+  height: 100% !important;
   max-height: 100%;
   width: 100%;
   max-width: min(100%, 560px);
@@ -129,12 +129,20 @@
 :host .dialog-content {
   background-color: var(--color-white, #fff);
   align-items: start;
-  flex: 0 1 auto;
+  flex: 1;
   flex-direction: column;
   gap: calc(32rem/18);
   overflow: auto;
   position: relative;
   z-index: 1;
+}
+
+/* iOS specific styles */
+@media only screen and (min-device-width: 320px) and (max-device-width: 812px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 2),
+       only screen and (min-device-width: 320px) and (max-device-width: 812px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 2) {
+    :host .dialog-content {
+    flex: 1;
+  }
 }
 
 :host .dialog-content .sub-level {
